// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependency multi file 1`] = `
Object {
  "conduit_a.proto": "
        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
        
        
message m2 {
	required m1 m = 1;
}
        ",
}
`;

exports[`simple multi file 1`] = `
Object {
  "conduit_a.proto": "
        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
        
        
message m2 {
	required double d = 1;
}


message m1 {
	required m2 m = 1;
}
        ",
}
`;
